Checked export to archive with selected compression type
